--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,3 +55,13 @@ iframe#webpack-dev-server-client-overlay {
   background-color: darkgray !important;
   border-color: black !important;
 }
+
+/* Override for generated class */
+.css-30jzfy {
+  padding-left: 0;
+}
+
+/* Override for MUI Box root + generated class */
+.MuiBox-root.css-30jzfy {
+  padding: 0 !important;
+}
